@@ -209,6 +209,7 @@
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
             --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.sql/java.sql=ALL-UNNAMED
             ${surefire.args.base}
         </surefire.test.unit.open.args>
         <!-- Emulate the behaviour in standalone, where slf4j is loaded in the boot layer -->
